--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang = "pt-br">
-
 <head>
     <meta charset = "UTF-8">
     <title>Barbearia MP</title>
+    <link rel = "stylesheet" href = "style.css">
 </head>
-
+<body>
+    <h1>Sobre a Barbearia__________</h1>
+    <p>Localizada no coração da cidade a Barbearia__________
+    traz para o mercado o que há de melhor para seu cabelo e barba</p>
+</body>
 </html>
