--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <title>Barbearia MP</title>
     <link rel = "stylesheet" href = "style.css">
 </head>
+
+<header>
+    <h1>BARBEARIA________</h1>
+
+    <ul>
+        <li> HORARIO DE ATENDIMENTO </li>
+        <li> MEUS PRODUTOS </li>
+        <li> SAIBA MAIS </li>
+    </ul>
+</header>
+
 <body>
     <h1>Sobre a Barbearia__________</h1>
     <p>Localizada no coração da cidade a Barbearia__________
@@ -27,6 +38,14 @@ garantindo qualidade e satisfação dos nossos clientes.</p>
  </ul>
 
     <img class = "imagem-2" src ="beneficios (2).jpg" alt="imagem beneficios">
+
+
+    <footer>
+    <p>Para mais informações acesse os contatos abaixo</p>
+    <p>@barbearia_mp</p>
+    <p>Barbearia MP</p>
+    <p>(42) 99998-3243</p>
+    </footer>
 
 </body>
 </html>
